# nurburgring-predictor

./: .env.example  .gitignore  404.html  README.md  docker-compose.yml  index.html  index.txt  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
.atl/: skill-registry.md
.github/workflows/: deploy.yml  scrape-race.yml
404/: index.html
app/: globals.css  layout.tsx  page.tsx
backend-node/: .env.example  .eslintrc.cjs  package-lock.json  package.json
backend-node/src/: index.js
backend-python/: pyproject.toml
components/: FilterBar.tsx  Header.tsx  LanguageContext.tsx  LanguageToggle.tsx  PredictionCard.tsx  PredictionCards.tsx  Providers.tsx  RaceLeaderboard.tsx  RaceTimeline.tsx  Sidebar.tsx  StatIndicator.tsx
docs/: 404.html  ARCHITECTURE.md  GITFLOW.md  index.html  index.txt
frontend/: pnpm-lock.yaml
frontend/.next/: BUILD_ID  app-build-manifest.json  build-manifest.json  images-manifest.json  next-minimal-server.js.nft.json  next-server.js.nft.json  prerender-manifest.json  required-server-files.json  routes-manifest.json  trace
frontend/app/: layout.tsx  page.tsx
frontend/components/: CategorySelector.tsx  FilterBar.tsx  FilterContext.tsx  Header.tsx  MobileFilters.tsx  PredictionCard.tsx  PredictionCards.tsx  Providers.tsx  RaceContext.tsx  RaceDashboard.tsx  RaceLeaderboard.tsx  RaceTimeline.tsx  Sidebar.tsx  StatsPanel.tsx
frontend/lib/: live-race-timer.ts  prediction-engine.ts  race-data-service.ts  (+1 more)
hooks/: usePredictions.ts
lib/: prediction-engine.ts
scripts/: fetch-race-data.js
types/: race.ts
(+84 files in other folders)
