[project]
name = "nurburgring-scraper"
version = "0.1.0"
description = ""
authors = [
  { name = "Statick", email = "your-email@example.com" }
]
requires-python = ">=3.11,<3.15"
dependencies = [
  "polars",
  "pandas",
  "scikit-learn",
  "xgboost",
  "playwright",
  "sqlalchemy",
  "psycopg2-binary",
  "python-dotenv",
  "redis",
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.0.0"
ruff = "^0.3.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
